# term3-laba6

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
main/: main.cpp
structures/: CMakeLists.txt  TFormula.hpp  TStack.hpp  TVector.hpp
test/: CMakeLists.txt  test_formula.cpp
